Made everything, lmao Co-authored-by: Sebastian Blok <segb@itu.dk> Co-authored-by: Karl Gustav Løhr <kagl@itu.dk>

--- a/ScrabbleTemplate/ScrabbleTemplate.fsproj
+++ b/ScrabbleTemplate/ScrabbleTemplate.fsproj
@@ -9,7 +9,7 @@
 
     <Compile Include="Dictionary.fsi" />
 
-    <Compile Include="Dictionray.fs" />
+    <Compile Include="Dictionary.fs" />
 
     <Content Include="Dictionaries\English.txt" />
     <Compile Include="Program.fs" />
