--- a/ScrabbleBot/ScrabbleBot.fsproj
+++ b/ScrabbleBot/ScrabbleBot.fsproj
@@ -1,9 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    </PropertyGroup>
-
+  </PropertyGroup>
   <ItemGroup>
     <Compile Include="MultiSet.fsi" />
     <Compile Include="MultiSet.fs" />
@@ -14,19 +12,17 @@
     <Compile Include="Eval.fs" />
     <Compile Include="Parser.fsi" />
     <Compile Include="Parser.fs" />
+    <Compile Include="MoveRobert.fs" />
     <Compile Include="Scrabble.fsi" />
     <Compile Include="Scrabble.fs" />
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="FParsec" Version="1.1.1" />
     <PackageReference Update="FSharp.Core" Version="7.0.200" />
   </ItemGroup>
-
   <ItemGroup>
     <Reference Include="ScrabbleUtil, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\dlls\ScrabbleUtil.dll</HintPath>
     </Reference>
   </ItemGroup>
-
 </Project>
